--- a/library-project/src/Components/Booklist.css
+++ b/library-project/src/Components/Booklist.css
@@ -1,8 +1,20 @@
+.bcontainer {
+  height: 125px;
+  text-align: justify;
+  font-size: 0.1px; /* IE 9/10 don't like font-size: 0; */
+  min-width: 600px;
+}
 .person {
   display: inline-block;
   border: 1px solid #eee;
   border-radius: 8px;
   box-shadow: 0 2px 2px #ccc;
-  width: 200px;
-  padding: 20px;
+  width: 300px;
+  padding: 30px;
+  margin-left: 3%;
+}
+.bcontainer:after {
+  content: '';
+  width: 100%; /* Ensures there are at least 2 lines of text, so justification works */
+  display: inline-block;
 }
