--- a/library-project/src/Components/Carousel/Carousel.css
+++ b/library-project/src/Components/Carousel/Carousel.css
@@ -11,7 +11,8 @@
   padding: 5px;
   max-width: 240px;
   text-align: left;
-  margin: 0 auto; }
+  margin: 0 auto; 
+}
 
 /* #endregion */
 /* #region cards slider */
@@ -29,7 +30,9 @@
 
  .col {
   height: 264px;
-  position: relative; }
+  position: relative; 
+}
+
   .col:before, .col:after {
     content: '';
     display: block;
@@ -48,13 +51,24 @@
 .cards-slider {
   position: relative;
   max-width: 226px;
-  margin: 0 auto; }
-  .cards-slider:after {
-    content: '';
-    display: block;
-    width: 100%;
-    height: 264px;
-    outline: 5px solid #61DAFB;
-    position: absolute;
-    top: 0;
-    left: 0; } 
+  margin: 0 auto; 
+}
+
+.cards-slider:after {
+  content: '';
+  display: block;
+  width: 100%;
+  height: 264px;
+  outline: 5px solid #61DAFB;
+  position: absolute;
+  top: 0;
+  left: 0; 
+} 
+
+.carousel-controls {
+  margin-top: 24px;
+  margin-bottom: 48px;
+  position: relative;
+  text-align: center;
+  z-index: 5;
+}
