--- a/library-project/src/Views/Home.css
+++ b/library-project/src/Views/Home.css
@@ -1,3 +1,9 @@
-.image {
-  align: center;
+.banner-image-container {
+  margin: 0 auto;
+}
+
+.banner-image-container img {
+  width: 100%;
+  height: 100%;
+
 }
