--- a/library-project/src/Components/Booklist.css
+++ b/library-project/src/Components/Booklist.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 .bcontainer{
   display: flex;
   flex-wrap: wrap;
@@ -18,4 +20,50 @@
   padding: 30px;
   width: 100%;
   text-align: center;
+  font-family: 'Montserrat', sans-serif;
+}
+.book-link-container {
+  margin-top: 24px;
+  height: 20px;
+}
+.book-link {
+  position: absolute;
+  bottom: 0;
+  transform: translate(-50%, 0);
+}
+.btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid red;
+  border-radius: 0.6em;
+  color: red;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+.btn:hover, .btn:focus {
+  color: #fff;
+  outline: 0;
+}
+.styled {
+  position: relative;
+  border-color: #a80f0f;
+  color: #fff;
+  box-shadow: 0 0 40px 40px #a80f0f inset, 0 0 0 0 #a80f0f;
+  transition: all 300ms ease-in-out;
+}
+.styled:hover {
+  box-shadow: 0 0 10px 0 #a80f0f inset, 0 0 10px 4px #a80f0f;
+  color: #a80f0f;
 }
