--- a/library-project/src/Components/Carousel.css
+++ b/library-project/src/Components/Carousel.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 /* #endregion */
 /* #region Card */
 /* Card */
@@ -12,6 +14,7 @@
   max-width: 240px;
   text-align: left;
   margin: 0 auto; 
+  font-family: 'Montserrat', sans-serif;
 }
 
 /* #endregion */
@@ -23,7 +26,7 @@
   .cards-slider-wrapper .card {
     flex: 1;
     min-width: 240px;
-    opacity: 0.7;
+    opacity: 1;
     transform: scale(0.8);
     background-color: white;
     transition: opacity 300ms linear, border-color 300ms linear, background-color 300ms linear, transform 300ms cubic-bezier(0.455, 0.03, 0.515, 0.955); }
@@ -58,17 +61,54 @@
   content: '';
   display: block;
   width: 100%;
-  height: 264px;
-  outline: 5px solid #61DAFB;
+  height: 360px;
+  outline: 5px solid #a80f0f;
   position: absolute;
-  top: 0;
+  top: 45px;
   left: 0; 
 } 
 
 .carousel-controls {
-  margin-top: 24px;
+  margin-top: 150px;
   margin-bottom: 48px;
   position: relative;
   text-align: center;
   z-index: 5;
+}
+
+.btn {
+  box-sizing: border-box;
+  appearance: none;
+  background-color: transparent;
+  border: 2px solid red;
+  border-radius: 0.6em;
+  color: red;
+  cursor: pointer;
+  display: flex;
+  align-self: center;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1;
+  margin: 20px;
+  padding: 1.2em 2.8em;
+  text-decoration: none;
+  text-align: center;
+  text-transform: uppercase;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 700;
+}
+.btn:hover, .btn:focus {
+  color: #fff;
+  outline: 0;
+}
+.styled {
+  position: relative;
+  border-color: #a80f0f;
+  color: #fff;
+  box-shadow: 0 0 40px 40px #a80f0f inset, 0 0 0 0 #a80f0f;
+  transition: all 300ms ease-in-out;
+}
+.styled:hover {
+  box-shadow: 0 0 10px 0 #a80f0f inset, 0 0 10px 4px #a80f0f;
+  color: #a80f0f;
 }
