--- a/library-project/src/Components/Header.css
+++ b/library-project/src/Components/Header.css
@@ -1,6 +1,8 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 body {
   background: #eaeaea;
-  font-family: 'Helvetica Neue', Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif;
 }
 
 .wrapper {
