--- a/library-project/src/Views/Home.css
+++ b/library-project/src/Views/Home.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css?family=Montserrat');
+
 .banner-image-container {
   margin: 0 auto;
 }
@@ -6,4 +8,8 @@
   width: 100%;
   height: 100%;
 
+}
+#myh3{
+  font-family: 'Montserrat', sans-serif;
+  padding-left: 20px;
 }
