--- a/library-project/src/Views/About.css
+++ b/library-project/src/Views/About.css
@@ -1,7 +1,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Montserrat');
 
-.person {
+.merson {
   display: inline-block;
   border: 1px solid #eee;
   border-radius: 8px;
